# Teste_the_best

./: .gitignore  README.md  docker-compose.yml  exemplo.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data/: clientes 2(in).csv  itens_pedido 2(in).csv  pedidos 2(in).csv  produtos 2(in).csv
docs/: index.md
src/: Dockerfile  database.py  exemplo.py  extract.py  load.py  main.py  models.py  schema.py  teste.py  transform.py  transform_copia.py  tt.py
tests/: test_1_extract.py  test_2_transform.py  test_3_load.py
