[tool.poetry]
name = "the-best"
version = "0.1.0"
description = "teste tecnico grupo the best"
authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
