[tool.poetry]
name = "the-best"
version = "0.1.0"
description = "teste tecnico grupo the best"
authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
pandera = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
